// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly renders correctly with otherFunding 1`] = `
<table>
  <tbody>
    <CostAllocationRows
      activityIndex={-1}
      ffy="1990"
      otherFunding={
        Object {
          "1990": Object {
            "contractors": 350,
            "expenses": 200,
            "statePersonnel": 100,
            "total": 650,
          },
          "1991": Object {
            "contractors": 150,
            "expenses": 700,
            "statePersonnel": 400,
            "total": 1250,
          },
        }
      }
      years={
        Object {
          "1990": Object {
            "contractorResources": Array [
              Object {
                "description": "contractor 2.1",
                "totalCost": 2000,
                "unitCost": null,
                "units": null,
              },
              Object {
                "description": "contractor 2.2",
                "totalCost": 2001,
                "unitCost": 20,
                "units": "20 hours",
              },
            ],
            "contractorResourcesTotal": 1000,
            "federalPercent": 1001,
            "federalShare": 90,
            "keyPersonnel": Array [
              Object {
                "description": "key person (APD Key Personnel)",
                "totalCost": 1002,
                "unitCost": null,
                "units": "100% time",
              },
            ],
            "medicaidShare": 1003,
            "nonPersonnel": Array [
              Object {
                "description": "costly costs",
                "totalCost": 3000,
                "unitCost": null,
                "units": null,
              },
            ],
            "nonPersonnelTotal": 1004,
            "otherFunding": 1005,
            "statePercent": 10,
            "statePersonnel": Array [
              Object {
                "description": "personnel role",
                "totalCost": 4000,
                "unitCost": 40,
                "units": "0.5 FTE",
              },
            ],
            "statePersonnelTotal": 1006,
            "stateShare": 1007,
            "totalCost": 1008,
          },
          "1991": Object {
            "contractorResources": Array [
              Object {
                "description": "contractor 2.1",
                "totalCost": 6000,
                "unitCost": null,
                "units": null,
              },
              Object {
                "description": "contractor 2.2",
                "totalCost": 6001,
                "unitCost": 60,
                "units": "60 hours",
              },
            ],
            "contractorResourcesTotal": 7000,
            "federalPercent": 7001,
            "federalShare": 50,
            "keyPersonnel": Array [
              Object {
                "description": "key person (APD Key Personnel)",
                "totalCost": 8002,
                "unitCost": null,
                "units": "100% time",
              },
            ],
            "medicaidShare": 7003,
            "nonPersonnel": Array [
              Object {
                "description": "costly costs",
                "totalCost": 9000,
                "unitCost": null,
                "units": null,
              },
            ],
            "nonPersonnelTotal": 7004,
            "otherFunding": 7005,
            "statePercent": 50,
            "statePersonnel": Array [
              Object {
                "description": "personnel role",
                "totalCost": 9000,
                "unitCost": 90,
                "units": "0.5 FTE",
              },
            ],
            "statePersonnelTotal": 7006,
            "stateShare": 7007,
            "totalCost": 7008,
          },
        }
      }
    >
      <tr
        className="budget-table--row__header"
      >
        <th
          colSpan="6"
          scope="row"
        >
          State Staff
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "key person (APD Key Personnel)",
              "totalCost": 1002,
              "unitCost": null,
              "units": "100% time",
            },
          ]
        }
      >
        <tr
          key="key person (APD Key Personnel)"
        >
          <td
            className="title"
          >
            key person (APD Key Personnel)
          </td>
          <td
            className="budget-table--number"
          />
          <td
            className="budget-table--number ds-u-padding--0"
          />
          <td
            className="budget-table--number ds-u-text-align--left"
          >
            100% time
          </td>
          <td
            className="budget-table--number"
          />
          <td
            className="budget-table--number"
          >
            <Dollars>
              <span>
                $1,002
              </span>
            </Dollars>
          </td>
        </tr>
      </CostSummaryRows>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "personnel role",
              "totalCost": 4000,
              "unitCost": 40,
              "units": "0.5 FTE",
            },
          ]
        }
      >
        <tr
          key="personnel role"
        >
          <td
            className="title"
          >
            personnel role
          </td>
          <td
            className="budget-table--number"
          >
            <Dollars>
              <span>
                $40
              </span>
            </Dollars>
          </td>
          <td
            className="budget-table--number ds-u-padding--0"
          >
            ×
          </td>
          <td
            className="budget-table--number ds-u-text-align--left"
          >
            0.5 FTE
          </td>
          <td
            className="budget-table--number"
          >
            =
          </td>
          <td
            className="budget-table--number"
          >
            <Dollars>
              <span>
                $4,000
              </span>
            </Dollars>
          </td>
        </tr>
      </CostSummaryRows>
      <tr>
        <td
          className="title"
          colSpan="4"
        >
          Other Funding Amount
        </td>
        <td>
          -
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars>
            <span>
              $100
            </span>
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--total budget-table--row__highlight"
      >
        <td
          className="title"
          colSpan="5"
        >
          State Staff Total
        </td>
        <td
          className="budget-table--number"
          data-cy="total"
        >
          <Dollars>
            <span>
              $906
            </span>
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--row__header"
      >
        <th
          colSpan="6"
          scope="col"
        >
          Other State Expenses
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "costly costs",
              "totalCost": 3000,
              "unitCost": null,
              "units": null,
            },
          ]
        }
      >
        <tr
          key="costly costs"
        >
          <td
            className="title"
          >
            costly costs
          </td>
          <td
            className="budget-table--number"
          />
          <td
            className="budget-table--number ds-u-padding--0"
          />
          <td
            className="budget-table--number ds-u-text-align--left"
          />
          <td
            className="budget-table--number"
          />
          <td
            className="budget-table--number"
          >
            <Dollars>
              <span>
                $3,000
              </span>
            </Dollars>
          </td>
        </tr>
      </CostSummaryRows>
      <tr>
        <td
          className="title"
          colSpan="4"
        >
          Other Funding Amount
        </td>
        <td>
          -
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars>
            <span>
              $200
            </span>
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--total budget-table--row__highlight"
      >
        <td
          className="title"
          colSpan="5"
        >
          Other State Expenses Total
        </td>
        <td
          className="budget-table--number"
          data-cy="total"
        >
          <Dollars>
            <span>
              $804
            </span>
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--row__header"
      >
        <th
          colSpan="6"
          scope="col"
        >
          Private Contractor
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "contractor 2.1",
              "totalCost": 2000,
              "unitCost": null,
              "units": null,
            },
            Object {
              "description": "contractor 2.2",
              "totalCost": 2001,
              "unitCost": 20,
              "units": "20 hours",
            },
          ]
        }
      >
        <tr
          key="contractor 2.1"
        >
          <td
            className="title"
          >
            contractor 2.1
          </td>
          <td
            className="budget-table--number"
          />
          <td
            className="budget-table--number ds-u-padding--0"
          />
          <td
            className="budget-table--number ds-u-text-align--left"
          />
          <td
            className="budget-table--number"
          />
          <td
            className="budget-table--number"
          >
            <Dollars>
              <span>
                $2,000
              </span>
            </Dollars>
          </td>
        </tr>
        <tr
          key="contractor 2.2"
        >
          <td
            className="title"
          >
            contractor 2.2
          </td>
          <td
            className="budget-table--number"
          >
            <Dollars>
              <span>
                $20
              </span>
            </Dollars>
          </td>
          <td
            className="budget-table--number ds-u-padding--0"
          >
            ×
          </td>
          <td
            className="budget-table--number ds-u-text-align--left"
          >
            20 hours
          </td>
          <td
            className="budget-table--number"
          >
            =
          </td>
          <td
            className="budget-table--number"
          >
            <Dollars>
              <span>
                $2,001
              </span>
            </Dollars>
          </td>
        </tr>
      </CostSummaryRows>
      <tr>
        <td
          className="title"
          colSpan="4"
        >
          Other Funding Amount
        </td>
        <td>
          -
        </td>
        <td
          className="budget-table--number"
        >
          <Dollars>
            <span>
              $350
            </span>
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--total budget-table--row__highlight"
      >
        <td
          className="title"
          colSpan="5"
        >
          Private Contractor Total
        </td>
        <td
          className="budget-table--number"
          data-cy="total"
        >
          <Dollars>
            <span>
              $650
            </span>
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--total budget-table--row__header"
      >
        <td
          colSpan="5"
        >
          Activity 
           Total Computable Medicaid Cost
        </td>
        <td
          className="budget-table--number"
          data-cy="total"
        >
          <Dollars>
            <span>
              $358
            </span>
          </Dollars>
        </td>
      </tr>
    </CostAllocationRows>
  </tbody>
</table>
`;

exports[`renders correctly renders correctly without otherFunding 1`] = `
<table>
  <tbody>
    <CostAllocationRows
      activityIndex={-1}
      ffy="1990"
      otherFunding={null}
      years={
        Object {
          "1990": Object {
            "contractorResources": Array [
              Object {
                "description": "contractor 2.1",
                "totalCost": 2000,
                "unitCost": null,
                "units": null,
              },
              Object {
                "description": "contractor 2.2",
                "totalCost": 2001,
                "unitCost": 20,
                "units": "20 hours",
              },
            ],
            "contractorResourcesTotal": 1000,
            "federalPercent": 1001,
            "federalShare": 90,
            "keyPersonnel": Array [
              Object {
                "description": "key person (APD Key Personnel)",
                "totalCost": 1002,
                "unitCost": null,
                "units": "100% time",
              },
            ],
            "medicaidShare": 1003,
            "nonPersonnel": Array [
              Object {
                "description": "costly costs",
                "totalCost": 3000,
                "unitCost": null,
                "units": null,
              },
            ],
            "nonPersonnelTotal": 1004,
            "otherFunding": 1005,
            "statePercent": 10,
            "statePersonnel": Array [
              Object {
                "description": "personnel role",
                "totalCost": 4000,
                "unitCost": 40,
                "units": "0.5 FTE",
              },
            ],
            "statePersonnelTotal": 1006,
            "stateShare": 1007,
            "totalCost": 1008,
          },
          "1991": Object {
            "contractorResources": Array [
              Object {
                "description": "contractor 2.1",
                "totalCost": 6000,
                "unitCost": null,
                "units": null,
              },
              Object {
                "description": "contractor 2.2",
                "totalCost": 6001,
                "unitCost": 60,
                "units": "60 hours",
              },
            ],
            "contractorResourcesTotal": 7000,
            "federalPercent": 7001,
            "federalShare": 50,
            "keyPersonnel": Array [
              Object {
                "description": "key person (APD Key Personnel)",
                "totalCost": 8002,
                "unitCost": null,
                "units": "100% time",
              },
            ],
            "medicaidShare": 7003,
            "nonPersonnel": Array [
              Object {
                "description": "costly costs",
                "totalCost": 9000,
                "unitCost": null,
                "units": null,
              },
            ],
            "nonPersonnelTotal": 7004,
            "otherFunding": 7005,
            "statePercent": 50,
            "statePersonnel": Array [
              Object {
                "description": "personnel role",
                "totalCost": 9000,
                "unitCost": 90,
                "units": "0.5 FTE",
              },
            ],
            "statePersonnelTotal": 7006,
            "stateShare": 7007,
            "totalCost": 7008,
          },
        }
      }
    >
      <tr
        className="budget-table--row__header"
      >
        <th
          scope="col"
        >
          State Staff
        </th>
        <th
          colSpan="2"
          scope="col"
        >
          <span
            className="ds-u-visibility--screen-reader"
          >
            unit cost
          </span>
        </th>
        <th
          colSpan="2"
          scope="col"
        >
          <span
            className="ds-u-visibility--screen-reader"
          >
            units
          </span>
        </th>
        <th
          scope="col"
        >
          Total cost
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "key person (APD Key Personnel)",
              "totalCost": 1002,
              "unitCost": null,
              "units": "100% time",
            },
          ]
        }
      >
        <tr
          key="key person (APD Key Personnel)"
        >
          <td
            className="title"
          >
            key person (APD Key Personnel)
          </td>
          <td
            className="budget-table--number"
          />
          <td
            className="budget-table--number ds-u-padding--0"
          />
          <td
            className="budget-table--number ds-u-text-align--left"
          >
            100% time
          </td>
          <td
            className="budget-table--number"
          />
          <td
            className="budget-table--number"
          >
            <Dollars>
              <span>
                $1,002
              </span>
            </Dollars>
          </td>
        </tr>
      </CostSummaryRows>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "personnel role",
              "totalCost": 4000,
              "unitCost": 40,
              "units": "0.5 FTE",
            },
          ]
        }
      >
        <tr
          key="personnel role"
        >
          <td
            className="title"
          >
            personnel role
          </td>
          <td
            className="budget-table--number"
          >
            <Dollars>
              <span>
                $40
              </span>
            </Dollars>
          </td>
          <td
            className="budget-table--number ds-u-padding--0"
          >
            ×
          </td>
          <td
            className="budget-table--number ds-u-text-align--left"
          >
            0.5 FTE
          </td>
          <td
            className="budget-table--number"
          >
            =
          </td>
          <td
            className="budget-table--number"
          >
            <Dollars>
              <span>
                $4,000
              </span>
            </Dollars>
          </td>
        </tr>
      </CostSummaryRows>
      <tr
        className="budget-table--total budget-table--row__highlight"
      >
        <td
          className="title"
          colSpan="5"
        >
          State Staff Total
        </td>
        <td
          className="budget-table--number"
          data-cy="total"
        >
          <Dollars>
            <span>
              $1,006
            </span>
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--row__header"
      >
        <th
          colSpan="6"
          scope="col"
        >
          Other State Expenses
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "costly costs",
              "totalCost": 3000,
              "unitCost": null,
              "units": null,
            },
          ]
        }
      >
        <tr
          key="costly costs"
        >
          <td
            className="title"
          >
            costly costs
          </td>
          <td
            className="budget-table--number"
          />
          <td
            className="budget-table--number ds-u-padding--0"
          />
          <td
            className="budget-table--number ds-u-text-align--left"
          />
          <td
            className="budget-table--number"
          />
          <td
            className="budget-table--number"
          >
            <Dollars>
              <span>
                $3,000
              </span>
            </Dollars>
          </td>
        </tr>
      </CostSummaryRows>
      <tr
        className="budget-table--total budget-table--row__highlight"
      >
        <td
          className="title"
          colSpan="5"
        >
          Other State Expenses Total
        </td>
        <td
          className="budget-table--number"
          data-cy="total"
        >
          <Dollars>
            <span>
              $1,004
            </span>
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--row__header"
      >
        <th
          colSpan="6"
          scope="col"
        >
          Private Contractor
        </th>
      </tr>
      <CostSummaryRows
        items={
          Array [
            Object {
              "description": "contractor 2.1",
              "totalCost": 2000,
              "unitCost": null,
              "units": null,
            },
            Object {
              "description": "contractor 2.2",
              "totalCost": 2001,
              "unitCost": 20,
              "units": "20 hours",
            },
          ]
        }
      >
        <tr
          key="contractor 2.1"
        >
          <td
            className="title"
          >
            contractor 2.1
          </td>
          <td
            className="budget-table--number"
          />
          <td
            className="budget-table--number ds-u-padding--0"
          />
          <td
            className="budget-table--number ds-u-text-align--left"
          />
          <td
            className="budget-table--number"
          />
          <td
            className="budget-table--number"
          >
            <Dollars>
              <span>
                $2,000
              </span>
            </Dollars>
          </td>
        </tr>
        <tr
          key="contractor 2.2"
        >
          <td
            className="title"
          >
            contractor 2.2
          </td>
          <td
            className="budget-table--number"
          >
            <Dollars>
              <span>
                $20
              </span>
            </Dollars>
          </td>
          <td
            className="budget-table--number ds-u-padding--0"
          >
            ×
          </td>
          <td
            className="budget-table--number ds-u-text-align--left"
          >
            20 hours
          </td>
          <td
            className="budget-table--number"
          >
            =
          </td>
          <td
            className="budget-table--number"
          >
            <Dollars>
              <span>
                $2,001
              </span>
            </Dollars>
          </td>
        </tr>
      </CostSummaryRows>
      <tr
        className="budget-table--total budget-table--row__highlight"
      >
        <td
          className="title"
          colSpan="5"
        >
          Private Contractor Total
        </td>
        <td
          className="budget-table--number"
          data-cy="total"
        >
          <Dollars>
            <span>
              $1,000
            </span>
          </Dollars>
        </td>
      </tr>
      <tr
        className="budget-table--total budget-table--row__header"
      >
        <td
          colSpan="5"
        >
          Activity 
           Total Computable Medicaid Cost
        </td>
        <td
          className="budget-table--number"
          data-cy="total"
        >
          <Dollars>
            <span>
              $1,008
            </span>
          </Dollars>
        </td>
      </tr>
    </CostAllocationRows>
  </tbody>
</table>
`;

exports[`renders correctly renders internal cost summary rows component 1`] = `
Array [
  <tr
    key="item 1"
  >
    <td
      className="title"
    >
      item 1
    </td>
    <td
      className="budget-table--number"
    >
      <Dollars>
        10
      </Dollars>
    </td>
    <td
      className="budget-table--number ds-u-padding--0"
    >
      ×
    </td>
    <td
      className="budget-table--number ds-u-text-align--left"
    >
      10 items
    </td>
    <td
      className="budget-table--number"
    >
      =
    </td>
    <td
      className="budget-table--number"
    >
      <Dollars>
        100
      </Dollars>
    </td>
  </tr>,
  <tr
    key="item 2"
  >
    <td
      className="title"
    >
      item 2
    </td>
    <td
      className="budget-table--number"
    />
    <td
      className="budget-table--number ds-u-padding--0"
    />
    <td
      className="budget-table--number ds-u-text-align--left"
    />
    <td
      className="budget-table--number"
    />
    <td
      className="budget-table--number"
    >
      <Dollars>
        200
      </Dollars>
    </td>
  </tr>,
  <tr
    key="share percent"
  >
    <td
      className="title"
    >
      share percent
    </td>
    <td
      className="budget-table--number"
    >
      <Dollars>
        1
      </Dollars>
    </td>
    <td
      className="budget-table--number ds-u-padding--0"
    >
      ×
    </td>
    <td
      className="budget-table--number ds-u-text-align--left"
    >
      fte
    </td>
    <td
      className="budget-table--number ds-u-text-align--left"
    >
      × 
      50
      %
    </td>
    <td
      className="budget-table--number"
    >
      =
    </td>
    <td
      className="budget-table--number"
    >
      <Dollars>
        200
      </Dollars>
    </td>
  </tr>,
]
`;
